--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <main>
-        <h1>Welcome to My Website!</h1>  
+        Welcome to My Website!
     </main>
   </body>
 </html>
