--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <main>
-        Welcome to My Website!
+        <h1>Ryan Kurohara</h1>
+        <p>Welcome to my website! I'm a software engineer based in NYC, currently working at <a href='https://www.vise.com'>Vise</a>. Previously, I worked at Facebook on Business Integrity and studied Computer Science at Stanford.</p>
+        <p>Contact: ryankurohara@gmail.com</p>
     </main>
   </body>
 </html>
