--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <main>
         <h1>Ryan Kurohara</h1>
-        <p>Welcome to my website! I'm a software engineer based in NYC, currently working at <a href='https://www.vise.com'>Vise</a>. Previously, I worked at Facebook on Business Integrity and studied Computer Science at Stanford.</p>
+        <p>Welcome to my website! I'm a software engineer based in NYC. Previously, I worked at <a href='https://www.vise.com'>Vise</a> and Facebook on Business Integrity and studied Computer Science at Stanford.</p>
         <p>Contact: ryankurohara@gmail.com</p>
     </main>
   </body>
