--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <main>
         <h1>Ryan Kurohara</h1>
-        <p>Welcome to my website! I'm a software engineer based in NYC. Previously, I worked on financial technology at <a href='https://www.vise.com'>Vise</a> and business intgrity at Facebook. I studied Computer Science at Stanford.</p>
+        <p>Welcome to my website! I'm a software engineer based in NYC. Previously, I worked on financial technology at <a href='https://www.vise.com'>Vise</a> and business integrity at Facebook. I studied Computer Science at Stanford.</p>
         <p>Contact: ryankurohara@gmail.com</p>
     </main>
   </body>
